@@ -1,15 +1,8 @@
-/*
- * Created on 09.01.2006 for PIROL
- *
- * SVN header information:
- *  $Author: LBST-PF-3\orahn $
- *  $Rev: 2509 $
- *  $Date: 2006-10-06 10:01:50 +0000 (Fr, 06 Okt 2006) $
- *  $Id: ExportEnvelopeAsGeometryPlugIn.java 2509 2006-10-06 10:01:50Z LBST-PF-3\orahn $
- */
 package org.openjump.core.ui.plugin.layer;
 
 import java.awt.Color;
+import java.io.File;
+import java.math.BigDecimal;
 import java.util.Iterator;
 
 import javax.swing.Icon;
@@ -17,7 +10,10 @@ import javax.swing.Icon;
 import org.openjump.core.apitools.LayerTools;
 import org.openjump.core.apitools.objecttyperoles.FeatureCollectionRole;
 import org.openjump.core.apitools.objecttyperoles.RoleOutline;
+import org.openjump.core.ccordsys.utils.ProjUtils;
+import org.openjump.core.ccordsys.utils.SRSInfo;
 import org.openjump.core.rasterimage.RasterImageLayer;
+import org.openjump.core.rasterimage.TiffTags;
 
 import com.vividsolutions.jts.geom.Coordinate;
 import com.vividsolutions.jts.geom.Envelope;
@@ -31,6 +27,7 @@ import com.vividsolutions.jump.feature.FeatureCollection;
 import com.vividsolutions.jump.feature.FeatureDataset;
 import com.vividsolutions.jump.feature.FeatureSchema;
 import com.vividsolutions.jump.io.datasource.DataSourceQuery;
+import com.vividsolutions.jump.util.FileUtil;
 import com.vividsolutions.jump.workbench.WorkbenchContext;
 import com.vividsolutions.jump.workbench.imagery.ReferencedImageStyle;
 import com.vividsolutions.jump.workbench.model.Layer;
@@ -56,6 +53,8 @@ import de.latlon.deejump.wfs.jump.WFSLayer;
  * Giuseppe Aruta 2015_01_19 If multiple layerables are selected, It will be
  * exported one geometry including all of them
  * 
+ * Giuseppe Aruta 2017_11_12 Correct bug. Added output of srid for Layer and
+ * RasterImageLayer
  */
 
 public class ExportLayerableEnvelopeAsGeometryPlugIn extends AbstractPlugIn {
@@ -66,6 +65,11 @@ public class ExportLayerableEnvelopeAsGeometryPlugIn extends AbstractPlugIn {
             .get("org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Not-Saved");
     private final static String MULTIPLESOURCE = I18N
             .get("org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Multiple-Sources");
+    private final static String SRID = "SRID";
+    private final static String minX = "minX";
+    private final static String maxX = "maxX";
+    private final static String minY = "minY";
+    private final static String maxY = "maxY";
 
     private final static String LAYER = I18N.get("ui.GenericNames.LAYER");
 
@@ -109,7 +113,15 @@ public class ExportLayerableEnvelopeAsGeometryPlugIn extends AbstractPlugIn {
             ExportLayerableEnvelopeAsGeometryPlugIn.defaultSchema.addAttribute(
                     SOURCE_PATH, AttributeType.STRING);
             ExportLayerableEnvelopeAsGeometryPlugIn.defaultSchema.addAttribute(
-                    "CRS", AttributeType.STRING);
+                    SRID, AttributeType.STRING);
+            ExportLayerableEnvelopeAsGeometryPlugIn.defaultSchema.addAttribute(
+                    minX, AttributeType.DOUBLE);
+            ExportLayerableEnvelopeAsGeometryPlugIn.defaultSchema.addAttribute(
+                    maxX, AttributeType.DOUBLE);
+            ExportLayerableEnvelopeAsGeometryPlugIn.defaultSchema.addAttribute(
+                    minY, AttributeType.DOUBLE);
+            ExportLayerableEnvelopeAsGeometryPlugIn.defaultSchema.addAttribute(
+                    maxY, AttributeType.DOUBLE);
 
         }
     }
@@ -124,6 +136,7 @@ public class ExportLayerableEnvelopeAsGeometryPlugIn extends AbstractPlugIn {
     /**
      * @inheritDoc
      */
+    @Override
     public String getName() {
         return I18N
                 .get("org.openjump.core.ui.plugin.layer.pirolraster.ExportEnvelopeAsGeometryPlugIn.Export-Envelope-As-Geometry");
@@ -135,13 +148,14 @@ public class ExportLayerableEnvelopeAsGeometryPlugIn extends AbstractPlugIn {
     /**
      * @inheritDoc
      */
+    @Override
     public boolean execute(PlugInContext context) throws Exception {
-        Layerable layer = (Layerable) LayerTools.getSelectedLayerable(context,
+        Layerable layer = LayerTools.getSelectedLayerable(context,
                 Layerable.class);
         final WorkbenchContext wbcontext = context.getWorkbenchContext();
         Envelope envelope = new Envelope();
         int size = -1;// Layer size
-        size = layer.getLayerManager().size();// Get number
+        size = context.getSelectedLayerables().size();// Get number
         for (Iterator i = wbcontext.getLayerNamePanel()
                 .selectedNodes(Layerable.class).iterator(); i.hasNext();) {
             Layerable slayer = (Layerable) i.next();
@@ -188,12 +202,10 @@ public class ExportLayerableEnvelopeAsGeometryPlugIn extends AbstractPlugIn {
                                         .getMinY()) }), null);
 
         FeatureCollection newFeaturecollection = new FeatureDataset(
-                (FeatureSchema) ExportLayerableEnvelopeAsGeometryPlugIn.defaultSchema
-                        .clone());
+                ExportLayerableEnvelopeAsGeometryPlugIn.defaultSchema.clone());
 
         BasicFeature feature = new BasicFeature(
-                (FeatureSchema) ExportLayerableEnvelopeAsGeometryPlugIn.defaultSchema
-                        .clone());
+                ExportLayerableEnvelopeAsGeometryPlugIn.defaultSchema.clone());
 
         feature.setAttribute("GEOMETRY", geom);
 
@@ -204,15 +216,16 @@ public class ExportLayerableEnvelopeAsGeometryPlugIn extends AbstractPlugIn {
                 feature.setAttribute(SOURCE_PATH,
                         ((WMSLayer) layer).getServerURL());
 
-                feature.setAttribute("CRS", ((WMSLayer) layer).getSRS());
+                feature.setAttribute(SRID, ((WMSLayer) layer).getSRS());
             } else if (layer instanceof WFSLayer) {
                 feature.setAttribute(SOURCE_PATH,
                         ((WFSLayer) layer).getServerURL());
-                feature.setAttribute("CRS", ((WFSLayer) layer).getCrs());
+                feature.setAttribute(SRID, ((WFSLayer) layer).getCrs());
             } else if (layer instanceof RasterImageLayer) {
                 sourcePath = ((RasterImageLayer) layer).getImageFileName();
+                setInfoProjection((RasterImageLayer) layer);
                 feature.setAttribute(SOURCE_PATH, sourcePath);
-                feature.setAttribute("CRS", null);
+                feature.setAttribute(SRID, srsCode);
 
             } else if (layer instanceof Layer
                     && ((Layer) layer).getStyle(ReferencedImageStyle.class) == null) {
@@ -232,12 +245,12 @@ public class ExportLayerableEnvelopeAsGeometryPlugIn extends AbstractPlugIn {
                                 .get(DataStoreDataSource.CONNECTION_DESCRIPTOR_KEY);
                     }
                     if (fnameObj != null) {
-                        sourcePath = fnameObj.toString();
+                        sourcePath = fnameObj.toString().replace("%20", " ");
                     }
                 }
-
+                setInfoProjection((Layer) layer);
                 feature.setAttribute(SOURCE_PATH, sourcePath);
-                feature.setAttribute("CRS", null);
+                feature.setAttribute(SRID, srsCode);
 
             } else if (layer instanceof Layer
                     && ((Layer) layer).getStyle(ReferencedImageStyle.class) != null) {
@@ -248,25 +261,29 @@ public class ExportLayerableEnvelopeAsGeometryPlugIn extends AbstractPlugIn {
                     Feature feat = (Feature) i.next();
                     sourcePath = feat.getString("IMG_URI");
                     if (sourcePath != null) {
-                        sourcePath = sourcePath.substring(5);
+                        sourcePath = sourcePath.substring(5)
+                                .replace("%20", " ");
                     }
 
                 }
-
+                setInfoProjection((Layer) layer);
                 feature.setAttribute(SOURCE_PATH, sourcePath);
-                feature.setAttribute("CRS", null);
+                feature.setAttribute(SRID, srsCode);
             }
         } else {
             name = MULTIPLESOURCE;
             feature.setAttribute(LAYER, name);
             feature.setAttribute(SOURCE_PATH, MULTIPLESOURCE);
-            feature.setAttribute("CRS", null);
+            feature.setAttribute(SRID, null);
         }
+
+        feature.setAttribute(minX, roundOff(envelope.getMinX()));
+        feature.setAttribute(maxX, roundOff(envelope.getMaxX()));
+        feature.setAttribute(minY, roundOff(envelope.getMinY()));
+        feature.setAttribute(maxY, roundOff(envelope.getMaxX()));
         newFeaturecollection.add(feature);
 
-        addLayer(
-                I18N.get("org.openjump.core.ui.plugin.layer.pirolraster.ExportEnvelopeAsGeometryPlugIn.Geometry")
-                        + "_" + name, newFeaturecollection, context,
+        addLayer(ENVELOPE + "_" + name, newFeaturecollection, context,
                 new RoleOutline(), Color.yellow);
 
         return false;
@@ -279,6 +296,49 @@ public class ExportLayerableEnvelopeAsGeometryPlugIn extends AbstractPlugIn {
                 context, role);
     }
 
+    // Use BigDecimal to round off decimals
+    public static double roundOff(double number) {
+        BigDecimal bigDecimal = new BigDecimal(number);
+        BigDecimal roundedWithScale = bigDecimal.setScale(3,
+                BigDecimal.ROUND_HALF_EVEN);
+        double rounded = roundedWithScale.doubleValue();
+        return rounded;
+    }
+
     WorkbenchContext workbenchContext;
+
+    String srsCode = "0";
+
+    private void setInfoProjection(Layer layer) throws Exception {
+        SRSInfo srsInfo;
+        try {
+            srsInfo = ProjUtils.getSRSInfoFromLayerStyleOrSource(layer);
+        } catch (Exception e) {
+            srsInfo = ProjUtils.getSRSInfoFromLayerSource(layer);
+        }
+        srsCode = srsInfo.getCode();
+    }
+
+    private void setInfoProjection(RasterImageLayer layer) throws Exception {
+        String fileSourcePath = layer.getImageFileName();
+        String extension = FileUtil.getExtension(fileSourcePath).toLowerCase();
+        SRSInfo srsInfo;
+        if (extension.equals("tif") || extension.equals("tiff")) {
+            TiffTags.TiffMetadata metadata = TiffTags.readMetadata(new File(
+                    fileSourcePath));
+            if (metadata.isGeoTiff()) {
+
+                srsInfo = metadata.getSRSInfo();
+
+            } else {
+                srsInfo = ProjUtils.getSRSInfoFromAuxiliaryFile(fileSourcePath);
+
+            }
+        } else {
+            srsInfo = ProjUtils.getSRSInfoFromAuxiliaryFile(fileSourcePath);
+
+        }
+        srsCode = srsInfo.getCode();
+    }
 
 }
